monitoring/templates/ingress_dashboard_opensearch.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: opensearch-dashboard-proxy
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx-external
  rules:
    - http:
        paths:
          - path: /(_dashboards/?.*)$
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboard
                port:
                  number: 443
    # opens this for local development with dev ES
    - http:
        paths:
          - path: /opensearch/?(.*)$
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboard
                port:
                  number: 443
---
kind: Service
apiVersion: v1
metadata:
  name: opensearch-dashboard
  namespace: monitoring
  labels:
    app.kubernetes.io/component: opensearch-dashboard
    app.kubernetes.io/instance: opensearch-dashboard
    app.kubernetes.io/name: opensearch-dashboard
    app.kubernetes.io/managed-by: Helm
spec:
  type: ExternalName
  externalName: vpc-dev-sdx-es-kgfhpvtfio32mmlzxw22wbgi4i.ap-southeast-1.es.amazonaws.com
